--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport">
         <link href="output.css" rel="stylesheet">
-        <script src="index.js"></script>
+        <script src="index.js" defer></script>
     </head>
     <body class="bg-indigo-950">
         <h1 class="mt-12 mb-16 text-center text-violet-300 text-3xl font-bold">
@@ -16,9 +16,9 @@
                 <span class="mr-12"></span>
                 <input type="file" accept=".txt" class="truncate mr-12 max-w-52 file:mr-2 file:px-2 file:py-1 file:bg-violet-500 file:hover:bg-violet-600 file:rounded-full file:border-0 file:text-sm file:text-indigo-950"/>
                 <input type="button" value="Solve part 1" disabled class="px-4 py-1 bg-violet-500 hover:bg-violet-600 disabled:bg-zinc-400 rounded-full border-0 text-sm text-indigo-950"></button>
-                <span class="px-2 py-1 mr-12 min-w-28 bg-violet-100/75 rounded-lg text-right">asd</span>
+                <span class="px-2 py-1 mr-12 min-w-28 bg-violet-100/75 rounded-lg text-right whitespace-pre"> </span>
                 <input type="button" value="Solve part 2" disabled class="px-4 py-1 bg-violet-500 hover:bg-violet-600 disabled:bg-zinc-400 rounded-full border-0 text-sm text-indigo-950"></button>
-                <span class="px-2 py-1 mr-12 min-w-28 bg-violet-100/75 rounded-lg text-right">asd</span>
+                <span class="px-2 py-1 mr-12 min-w-28 bg-violet-100/75 rounded-lg text-right whitespace-pre"> </span>
             </li>
         </ul>
     </body>
