Day 2 + minor changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 class="mt-12 mb-16 text-center text-violet-300 text-3xl font-bold">
             Advent of Code 2024
         </h1>
-        <div class="mb-12 text-center text-violet-300">These are my solutions for Advent of Code 2024.</div>
+        <div class="mb-12 text-center text-violet-300">These are my solutions for Advent of Code 2024, implemented in TypeScript.</div>
         <ul id="solutions-list" class="mx-64 space-y-1">
             <li id="solution-template" class="flex items-center first:hidden rounded-xl px-4 py-3 odd:bg-violet-300 even:bg-violet-400 gap-x-2 text-indigo-950">
                 <span class="mr-12"></span>
