Day 10 & index page adjustments

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="mb-12 text-center text-violet-300">These are my solutions for Advent of Code 2024, implemented in TypeScript.</div>
         <ul id="solutions-list" class="mx-64 space-y-1">
             <li id="solution-template" class="flex items-center first:hidden rounded-xl px-4 py-3 odd:bg-violet-300 even:bg-violet-400 gap-x-2 text-indigo-950">
-                <span class="mr-12"></span>
-                <input type="file" accept=".txt" class="truncate mr-12 max-w-52 file:mr-2 file:px-2 file:py-1 file:bg-violet-500 file:hover:bg-violet-600 file:rounded-full file:border-0 file:text-sm file:text-indigo-950"/>
+                <span class="mr-12 w-16"></span>
+                <input type="file" accept=".txt" class="truncate mr-12 max-w-56 file:mr-2 file:px-2 file:py-1 file:bg-violet-500 file:hover:bg-violet-600 file:rounded-full file:border-0 file:text-sm file:text-indigo-950"/>
                 <input type="button" value="Solve part 1" disabled class="px-4 py-1 bg-violet-500 hover:bg-violet-600 disabled:bg-zinc-400 rounded-full border-0 text-sm text-indigo-950"></button>
                 <span class="px-2 py-1 mr-12 min-w-28 bg-violet-100/75 rounded-lg text-right whitespace-pre"> </span>
                 <input type="button" value="Solve part 2" disabled class="px-4 py-1 bg-violet-500 hover:bg-violet-600 disabled:bg-zinc-400 rounded-full border-0 text-sm text-indigo-950"></button>
