Day 21 + minor index page change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Advent of Code 2024
         </h1>
         <div class="mb-12 text-center text-violet-300">These are my solutions for Advent of Code 2024, implemented in TypeScript.</div>
-        <ul id="solutions-list" class="mx-64 space-y-1">
+        <ul id="solutions-list" class="mx-64 mb-12 space-y-1">
             <li id="solution-template" class="flex items-center first:hidden rounded-xl px-4 py-3 odd:bg-violet-300 even:bg-violet-400 gap-x-2 text-indigo-950">
                 <span class="mr-12 w-16"></span>
                 <input type="file" accept=".txt" class="truncate mr-12 max-w-56 file:mr-2 file:px-2 file:py-1 file:bg-violet-500 file:hover:bg-violet-600 file:rounded-full file:border-0 file:text-sm file:text-indigo-950"/>
